@@ -93,6 +93,18 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|ObjectContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|access
 operator|.
 name|DataNode
@@ -836,6 +848,57 @@ argument_list|()
 operator|.
 name|getName
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** 	 * Test case for CAY-2265 	 */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_UnnamedDomain_CustomNameProjectFile
+parameter_list|()
+block|{
+name|localRuntime
+operator|=
+operator|new
+name|ServerRuntimeBuilder
+argument_list|()
+operator|.
+name|addConfigs
+argument_list|(
+name|CayenneProjects
+operator|.
+name|CUSTOM_NAME_PROJECT
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"cayenne"
+argument_list|,
+name|localRuntime
+operator|.
+name|getDataDomain
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ObjectContext
+name|context
+init|=
+name|localRuntime
+operator|.
+name|newContext
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|context
 argument_list|)
 expr_stmt|;
 block|}
