@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
+<domain project-version="9">
+	<map name="testmap"/>
+</domain>
